--- a/.gitignore
+++ b/.gitignore
@@ -17,38 +17,20 @@ build/
 # IDE specific files
 .vscode/
 .idea/
+*.sublime-project
+*.sublime-workspace
+*.tmproj
+*.esproj
+*.cproject
+*.project
+.settings/
+.tmproj
 
-# Node.js
-
-**/*.trace
-**/*.zip
-**/*.tar.gz
-**/*.tgz
-**/*.log
-
-package-lock.json
-**/*.bun
-
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-node_modules/
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# OS generated files
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+Thumbs.db
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Backup files
+*.bak
+*.swp
+*~
