chore: initialize project structure with Python version and dependencies, remove Zig files, and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,1 @@
-# Zig build artifacts
-.zig-cache/
-zig-out/
-build/
-
-# Executable files
-*.exe
-*.o
-*.a
-*.so
-*.dylib
-
-# Temporary files
-*.tmp
-*.log
-
-# IDE specific files
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
-*.tmproj
-*.esproj
-*.cproject
-*.project
-.settings/
-.tmproj
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# Backup files
-*.bak
-*.swp
-*~
+venv/
