--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
-	"name": "portfolio",
-	"version": "0.1.0",
+	"name": "protfolio",
+	"private": true,
+	"version": "0.0.0",
 	"type": "module",
-	"author": {
-		"name": "Vhyran"
-	},
 	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"lint": "eslint .",
-		"preview": "vite preview"
+		"dev": "bunx --bun vite",
+		"build": "bunx --bun vite build",
+		"lint": "bunx biome lint ./src",
+		"format": "bunx biome format ./src",
+		"check": "bunx biome check ./src",
+		"preview": "bunx --bun vite preview"
 	},
 	"dependencies": {
-		"@tailwindcss/forms": "^0.5.9",
+		"motion": "^11.15.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
+		"@biomejs/biome": "1.9.4",
+		"@types/react": "^18.3.17",
+		"@types/react-dom": "^18.3.5",
 		"@vitejs/plugin-react": "^4.3.4",
-		"autoprefixer": "^10.4.20",
-		"globals": "^15.12.0",
-		"postcss": "^8.4.49",
-		"tailwindcss": "^3.4.17",
-		"vite": "^6.0.1"
+		"globals": "^15.13.0",
+		"typescript": "~5.6.2",
+		"vite": "^6.0.3"
 	}
 }
