--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
 	"name": "protfolio",
-	"private": true,
-	"version": "0.0.0",
+	"version": "0.1.0",
 	"type": "module",
 	"scripts": {
 		"dev": "bunx --bun vite",
@@ -18,10 +17,14 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@catppuccin/tailwindcss": "^0.1.6",
 		"@types/react": "^18.3.17",
 		"@types/react-dom": "^18.3.5",
 		"@vitejs/plugin-react": "^4.3.4",
+		"autoprefixer": "^10.4.20",
 		"globals": "^15.13.0",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^3.4.17",
 		"typescript": "~5.6.2",
 		"vite": "^6.0.3"
 	}
