--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "protfolio",
 	"version": "0.1.0",
 	"type": "module",
+	"license": "eXpL",
 	"scripts": {
 		"dev": "bunx --bun vite",
 		"build": "bunx --bun vite build",
@@ -11,6 +12,7 @@
 		"preview": "bunx --bun vite preview"
 	},
 	"dependencies": {
+		"@headlessui/react": "^2.2.0",
 		"motion": "^11.15.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
@@ -18,8 +20,10 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@catppuccin/tailwindcss": "^0.1.6",
+		"@types/bun": "^1.1.14",
 		"@types/react": "^18.3.17",
 		"@types/react-dom": "^18.3.5",
+		"@types/tailwindcss": "^3.1.0",
 		"@vitejs/plugin-react": "^4.3.4",
 		"autoprefixer": "^10.4.20",
 		"globals": "^15.13.0",
