--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	"dependencies": {
 		"motion": "^11.15.0",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"react-icons": "^5.4.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
