--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"motion": "^11.15.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-icons": "^5.4.0"
+		"react-icons": "^5.4.0",
+		"wouter": "^3.3.5"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
