--- a/biome.json
+++ b/biome.json
@@ -5,7 +5,10 @@
 		"clientKind": "git",
 		"useIgnoreFile": false
 	},
-	"files": { "ignoreUnknown": false, "ignore": [] },
+	"files": {
+		"ignoreUnknown": false,
+		"ignore": []
+	},
 	"organizeImports": {
 		"enabled": true
 	},
@@ -23,7 +26,14 @@
 		"formatWithErrors": false,
 		"indentStyle": "tab",
 		"indentWidth": 2,
-		"ignore": ["build/*", "*.db", "*.md", "*.lockb", "node_modules", "public/*"]
+		"ignore": [
+			"build/*",
+			"*.db",
+			"*.md",
+			"*.lockb",
+			"node_modules",
+			"public/*"
+		]
 	},
 	"javascript": {
 		"formatter": {
