--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"preview": "bunx --bun vite preview"
 	},
 	"dependencies": {
+		"lucide-react": "^0.509.0",
 		"motion": "^11.18.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
